--- a/PublicQuestions/Web.config
+++ b/PublicQuestions/Web.config
@@ -1,16 +1,10 @@
 <?xml version="1.0"?>
 
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=152368
-  -->
-
 <configuration>
-  <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
+
+  <appSettings>
+    <add key="dataURL" value="http://localhost:8080"/>
+  </appSettings>
 
   <system.web>
     <compilation debug="true" targetFramework="4.0">
@@ -25,37 +19,16 @@
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
 
-    <membership>
-      <providers>
-        <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices"
-             enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
-             maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-             applicationName="/" />
-      </providers>
-    </membership>
-
-    <profile>
-      <providers>
-        <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
-      </providers>
-    </profile>
-
-    <roleManager enabled="false">
-      <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
-      </providers>
-    </roleManager>
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="MvcContrib.UI"/>
+        <add namespace="MvcContrib.UI.Html"/>
+        <add namespace="MvcContrib.UI.Grid"/>
+        <add namespace="MvcContrib"/>
       </namespaces>
     </pages>
     
