--- a/PublicQuestions.UnitTests/PublicQuestions.UnitTests.csproj
+++ b/PublicQuestions.UnitTests/PublicQuestions.UnitTests.csproj
@@ -43,7 +43,7 @@
     </Reference>
     <Reference Include="nunit.framework, Version=2.5.0.9122, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\PublicQuestions-AddIns\NUnit-2.5.8\bin\net-2.0\framework\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Raven.Abstractions">
       <HintPath>..\Lib\Raven.Abstractions.dll</HintPath>
