--- a/PublicQuestions.UnitTests/PublicQuestions.UnitTests.csproj
+++ b/PublicQuestions.UnitTests/PublicQuestions.UnitTests.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>PublicQuestions.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,18 +39,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\Unity\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\Lib\ravenDB\Client-3.5\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=2.5.0.9122, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\PublicQuestions-AddIns\NUnit-2.5.8\bin\net-2.0\framework\nunit.framework.dll</HintPath>
+      <HintPath>..\Lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Raven.Abstractions">
-      <HintPath>..\Lib\Raven.Abstractions.dll</HintPath>
+      <HintPath>..\..\PublicQuestions-AddIns\ravenDB\Client\Raven.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="Raven.Client.Lightweight">
-      <HintPath>..\Lib\Raven.Client.Lightweight.dll</HintPath>
+      <HintPath>..\..\PublicQuestions-AddIns\ravenDB\Client\Raven.Client.Lightweight.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks">
       <HintPath>..\Lib\Rhino.Mocks.dll</HintPath>
@@ -65,13 +63,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MessageTest.cs" />
-    <Compile Include="UserAccessTest.cs" />
+    <Compile Include="SearchQuestions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\PublicQuestions.Model\PublicQuestions.Model.csproj">
       <Project>{5B2345E9-97CB-490D-AF20-17B183F66ECA}</Project>
