--- a/PublicQuestions.Model/PublicQuestions.Model.csproj
+++ b/PublicQuestions.Model/PublicQuestions.Model.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Questions\Answer.cs" />
     <Compile Include="Questions\Attributes.cs" />
     <Compile Include="Questions\MetaData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
